change BEM structure

--- a/index.html
+++ b/index.html
@@ -1,113 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main</title>
-    <link
-      <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Playfair+Display+SC:wght@900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/reset.css" />
-  </head>
-  <body>
-    <div class="wrapper">
-      <header class="header">
-        <div class="header__container _container">
-          <div class="header__logo">МАИ</div>
-          <nav class="header__menu _menu">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a href="#" class="menu__link">О НАС</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">НАШИ УСЛУГИ</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">НАША КОМАНДА</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">ПРАЙС</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">КОНТАКТЫ</a>
-              </li>
-              <li class="menu__item">
-                <div>+7(918)658-45-74</div>
-              </li>
-            </ul>
-          </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Main</title>
+  <link <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Playfair+Display+SC:wght@900&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/reset.css" />
+</head>
+
+<body>
+  <div class="wrapper">
+
+    <!---------- Header ------------>
+
+    <header class="header">
+      <div class="header__container">
+        <div class="header__logo">МАИ</div>
+        <nav class="header__menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">О НАС</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">НАШИ УСЛУГИ</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">НАША КОМАНДА</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">ПРАЙС</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">КОНТАКТЫ</a>
+            </li>
+            <li class="menu__item">
+              <div>+7(918)658-45-74</div>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <!---------- Main ------------>
+
+    <div class="main">
+
+      <!---------- Screen ------------>
+
+      <div class="screen-block">
+        <div class="screen-block__body">
+          <h1 class="screen-block__title">
+            ВАШ ЭКСПЕРТ В МИРЕ БУХГАЛТЕРИИ
+          </h1>
         </div>
-      </header>
-      <div class="main">
-        <div class="main-block">
-          <div class="main-block__container _container">
-            <div class="screen-block__container">
-              <h1 class="screen-block__title">
-                ВАШ ЭКСПЕРТ В МИРЕ БУХГАЛТЕРИИ
-              </h1>
+      </div>
+
+      <div class="underscreen-block">
+        <div class="underscreen-block__body">
+          <a href="" class="underscreen-block__button">
+            <div>СВЯЗАТЬСЯ С НАМИ</div>
+          </a>
+        </div>
+
+        <!---------- Separator ------------>
+
+        <div class="separator-block">
+          <div class="separator-block__container">
+            <div class="separator-block__title">
+              <h2>О НАС</h2>
             </div>
-            <div class="underscreen-block__container">
-              <a href="" class="underscreen-block__button">
-                <div>СВЯЗАТЬСЯ С НАМИ</div>
-              </a>
+          </div>
+          <div class="separator-block__subtitle">
+            <p>Профессиональные бухгалтерские услуги в Краснодарком крае</p>
+          </div>
+        </div>
+
+        <!---------- About ------------>
+
+        <div class="about-block__container">
+          <div class="about-block__text">
+            <p>MAI - ваш надежный партнёр в области ведения бухгалтерского, налогового и кадрового учета</p>
+            <p>Услуги оказываются в различных областях деятельности: <b>Торговля, Производство, Строительство, Услуги,
+                Общепит</b></p>
+          </div>
+          <div class="about-block__icon">
+            <div class="about-block__form">
+              <div class="about-block__image">
+                <img src="img/icons/trust.png" alt="icon_trust">
+              </div>
+              <div class="about-block__subtext">Доверие</div>
             </div>
-            <div class="separator-block">
-              <div class="separator-block__container _separator">
-                <div class="top-block__separator _top">
-                  <h2>О НАС</h2>
-                </div>
+            <div class="about-block__form">
+              <div class="about-block__image">
+                <img src="img/icons/confidention.png" alt="icon_confidention">
               </div>
-              <div class="low-block__separator _low">
-                <p>Профессиональные бухгалтерские услуги в Краснодарком крае</p>
-              </div>
+              <div class="about-block__subtext">Конфиденциальность</div>
             </div>
-            <div class="about-block__container _about">
-              <div class="text-block__about _text">
-                <p>MAI - ваш надежный партнёр в области ведения бухгалтерского, налогового и кадрового учета</p>
-                <p>Услуги оказываются в различных областях деятельности: <b>Торговля, Производство, Строительство, Услуги, Общепит</b></p>
+            <div class="about-block__form">
+              <div class="about-block__image">
+                <img src="img/sureness.png" alt="icon_sureness">
               </div>
-              <div class="icon-block__about _icon">
-                <div class="icon-form__about">
-                  <div class="icon-body">
-                    <img src="img/trust.png" alt="icon_trust">
-                  </div>
-                  <div class="icon-text">Доверие</div>
-                </div>
-                <div class="icon-form__about">
-                  <div class="icon-body">
-                    <img src="img/confidention.png" alt="icon_confidention">
-                  </div>
-                  <div class="icon-text">Конфиденциальность</div>
-                </div>
-                <div class="icon-form__about">
-                  <div class="icon-body">
-                    <img src="img/sureness.png" alt="icon_sureness">
-                  </div>
-                  <div class="icon-text">Уверенность</div>
-                </div>
-              </div>
-            </div>
-            <div class="separator-block">
-              <div class="separator-block__container _separator">
-                <div class="top-block__separator _top">
-                  <h2>НАШИ УСЛУГИ</h2>
-                </div>
-              </div>
-              <div class="low-block__separator _low">
-                <p>Услуги которые нам всегда по плечу</p>
-              </div>
+              <div class="about-block__subtext">Уверенность</div>
             </div>
           </div>
         </div>
+
+        <!---------- Separator 2 ------------>
+
+        <div class="separator-block">
+          <div class="separator-block__container">
+            <div class="separator-block__title">
+              <h2>НАШИ УСЛУГИ</h2>
+            </div>
+          </div>
+          <div class="separator-block__subtitle">
+            <p>Услуги которые нам всегда по плечу</p>
+          </div>
+        </div>
+
+         <!---------- Services ------------>
+
       </div>
-      <footer class="footer">Footer</footer>
+
     </div>
-    <script src="js/main.js"></script>
-  </body>
+  </div>
+  </div>
+  <footer class="footer">Footer</footer>
+  </div>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
