blocks: about services team price contacts

--- a/index.html
+++ b/index.html
@@ -68,70 +68,342 @@
             <div>СВЯЗАТЬСЯ С НАМИ</div>
           </a>
         </div>
+      </div>
+      <!---------- Separator ------------>
 
-        <!---------- Separator ------------>
-
-        <div class="separator-block">
-          <div class="separator-block__container">
-            <div class="separator-block__title">
-              <h2>О НАС</h2>
-            </div>
+      <div class="separator-block">
+        <div class="separator-block__container">
+          <div class="separator-block__title">
+            <h2>О НАС</h2>
           </div>
-          <div class="separator-block__subtitle">
-            <p>Профессиональные бухгалтерские услуги в Краснодарком крае</p>
+        </div>
+        <div class="separator-block__subtitle">
+          <p>Профессиональные бухгалтерские услуги в Краснодарком крае</p>
+        </div>
+      </div>
+
+      <!---------- About ------------>
+
+      <div class="about-block__container">
+        <div class="about-block__text">
+          <p>MAI - ваш надежный партнёр в области ведения бухгалтерского, налогового и кадрового учета</p>
+          <p>Услуги оказываются в различных областях деятельности: <strong>Торговля, Производство, Строительство,
+              Услуги,
+              Общепит</strong></p>
+        </div>
+        <div class="about-block__icon">
+          <div class="about-block__form">
+            <div class="about-block__image">
+              <img src="img/icons/trust.png" alt="icon_trust">
+            </div>
+            <div class="about-block__subtext">Доверие</div>
+          </div>
+          <div class="about-block__form">
+            <div class="about-block__image">
+              <img src="img/icons/confidention.png" alt="icon_confidention">
+            </div>
+            <div class="about-block__subtext">Конфиденциальность</div>
+          </div>
+          <div class="about-block__form">
+            <div class="about-block__image">
+              <img src="img/icons/sureness.png" alt="icon_sureness">
+            </div>
+            <div class="about-block__subtext">Уверенность</div>
+          </div>
+        </div>
+      </div>
+
+      <!---------- Separator 2 ------------>
+
+      <div class="separator-block">
+        <div class="separator-block__container">
+          <div class="separator-block__title">
+            <h2>НАШИ УСЛУГИ</h2>
+          </div>
+        </div>
+        <div class="separator-block__subtitle">
+          <p>Услуги которые нам всегда по плечу</p>
+        </div>
+      </div>
+
+      <!---------- Services ------------>
+      <div class="services-block">
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services1.png" alt="services1">
+          </div>
+          <div class="services-block__text">
+            <p>Бухгалтерский учет</p>
           </div>
         </div>
 
-        <!---------- About ------------>
-
-        <div class="about-block__container">
-          <div class="about-block__text">
-            <p>MAI - ваш надежный партнёр в области ведения бухгалтерского, налогового и кадрового учета</p>
-            <p>Услуги оказываются в различных областях деятельности: <b>Торговля, Производство, Строительство, Услуги,
-                Общепит</b></p>
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services2.png" alt="services2">
           </div>
-          <div class="about-block__icon">
-            <div class="about-block__form">
-              <div class="about-block__image">
-                <img src="img/icons/trust.png" alt="icon_trust">
-              </div>
-              <div class="about-block__subtext">Доверие</div>
-            </div>
-            <div class="about-block__form">
-              <div class="about-block__image">
-                <img src="img/icons/confidention.png" alt="icon_confidention">
-              </div>
-              <div class="about-block__subtext">Конфиденциальность</div>
-            </div>
-            <div class="about-block__form">
-              <div class="about-block__image">
-                <img src="img/sureness.png" alt="icon_sureness">
-              </div>
-              <div class="about-block__subtext">Уверенность</div>
-            </div>
+          <div class="services-block__text">
+            <p>Составление и сдача бухгалтерской и налоговой отчетности</p>
           </div>
         </div>
 
-        <!---------- Separator 2 ------------>
-
-        <div class="separator-block">
-          <div class="separator-block__container">
-            <div class="separator-block__title">
-              <h2>НАШИ УСЛУГИ</h2>
-            </div>
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services3.png" alt="services3">
           </div>
-          <div class="separator-block__subtitle">
-            <p>Услуги которые нам всегда по плечу</p>
+          <div class="services-block__text">
+            <p>Нулевая отчетность</p>
           </div>
         </div>
 
-         <!---------- Services ------------>
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services4.png" alt="services4">
+          </div>
+          <div class="services-block__text">
+            <p>Составление и сдача отчетов в статистику</p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services5.png" alt="services5">
+          </div>
+          <div class="services-block__text">
+            <p>Кадровый учет</p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services6.png" alt="services6">
+          </div>
+          <div class="services-block__text">
+            <p>Составление и сдача отчетов по сотрудникам</p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services7.png" alt="services7">
+          </div>
+          <div class="services-block__text">Заявления на получения патентов и приостановление деятельности по ПСН</p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services8.png" alt="services8">
+          </div>
+          <p class="services-block__text">Подготовка документов по встречным проверкам и запросам фискальных органов
+          </p>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services9.png" alt="services9">
+          </div>
+          <div class="services-block__text">Восстановление бухгалтерского и налогового учета</p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services10.png" alt="services10">
+          </div>
+          <div class="services-block__text">Юридическое сопровождение</p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services11.png" alt="services11">
+          </div>
+          <div class="services-block__text">Защита и представление интересов предприятия в суде и налоговой инспекции
+            </p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services12.png" alt="services12">
+          </div>
+          <div class="services-block__text">Регистрация и закрытие предприятия, процедура банкротства</p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services13.png" alt="services13">
+          </div>
+          <div class="services-block__text">Регистрация предприятия в ФСС</p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services14.png" alt="services14">
+          </div>
+          <div class="services-block__text">Открытие расчетных счетов в банках, получение ЭЦП</p>
+          </div>
+        </div>
+
+        <div class="services-block__body">
+          <div class="services-block__img">
+            <img src="img/services/services15.png" alt="services15">
+          </div>
+          <div class="services-block__text">Синхронизация и настройка программных комплексов для ведения внутреннего
+            учета
+            (складского, выпуск продукции, технологические карты и др.)</p>
+          </div>
+        </div>
 
       </div>
 
+      <!---------- Separator 3 ------------>
+
+      <div class="separator-block">
+        <div class="separator-block__container">
+          <div class="separator-block__title">
+            <h2>НАША КОМАНДА</h2>
+          </div>
+        </div>
+        <div class="separator-block__subtitle">
+          <p>Наши сотрудники всегда готовы помочь вам</p>
+        </div>
+      </div>
+
+      <!---------- Team ------------>
+
+      <div class="team-block">
+
+        <div class="team-block__body">
+          <div class="team-blocl__img">
+            <img src="img/team/team1.png" alt="team1">
+          </div>
+          <div class="team-block__name">
+            Сергей Юсупов
+          </div>
+          <div class="team-block__text">
+            <p>Каждый из нас понимает очевидную вещь: начало повседневной работы по формированию позиции предполагает
+              независимые способы реализации соответствующих условий активизации! Являясь всего лишь частью общей
+              картины, реализации соответствующих условий активизации!</p>
+          </div>
+        </div>
+
+        <div class="team-block__body">
+          <div class="team-blocl__img">
+            <img src="img/team/team2.png" alt="team2">
+          </div>
+          <div class="team-block__name">
+            Диана Черепанова
+          </div>
+          <div class="team-block__text">
+            <p>Каждый из нас понимает очевидную вещь: начало повседневной работы по формированию позиции предполагает
+              независимые способы реализации соответствующих условий активизации! Являясь всего лишь частью общей
+              картины, сде</p>
+          </div>
+        </div>
+
+        <div class="team-block__body">
+          <div class="team-blocl__img">
+            <img src="img/team/team3.png" alt="team3">
+          </div>
+          <div class="team-block__name">
+            Любовь Сергеева
+          </div>
+          <div class="team-block__text">
+            <p>Каждый из нас понимает очевидную вещь: начало повседневной работы по формированию позиции предполагает
+              независимые способы реализации соответствующих условий активизации! Являясь всего лишь частью общей
+              картины, начало повседневной работы по формированию позиции</p>
+          </div>
+        </div>
+
+        <div class="team-block__body">
+          <div class="team-blocl__img">
+            <img src="img/team/team4.png" alt="team4">
+          </div>
+          <div class="team-block__name">
+            Юрий Усачев
+          </div>
+          <div class="team-block__text">
+            <p>Каждый из нас понимает очевидную вещь: начало повседневной работы по формированию позиции предполагает
+              независимые способы реализации соответствующих условий активизации! Являясь всего лишь частью общей
+              картины, сде</p>
+          </div>
+        </div>
+
+      </div>
+
+      <!---------- Separator 4 ------------>
+
+      <div class="separator-block">
+        <div class="separator-block__container">
+          <div class="separator-block__title">
+            <h2>ПРАЙС</h2>
+          </div>
+        </div>
+        <div class="separator-block__subtitle">
+          <p>Наши цены приятно вас удивят</p>
+        </div>
+      </div>
+
+      <!---------- Price ------------>
+
+      <div class="price-block">
+        <div class="price-block__body">
+          <img src="img/price/price.png" alt="price">
+        </div>
+      </div>
+
+      <!---------- Separator 5 ------------>
+
+      <div class="separator-block">
+        <div class="separator-block__container">
+          <div class="separator-block__title">
+            <h2>КОНТАКТЫ</h2>
+          </div>
+        </div>
+      </div>
+
+      <!---------- Contacts ------------>
+      <div class="contact-block">
+        <div class="contact-block__text">
+          <p>г. Краснодар ул. Логическая д.78 оф. 258</p>
+          <p>тел. +7(918)-457-52-22</p>
+        </div>
+        <div class="contact-block__map">
+          <img src="img/map/map.png" alt="price">
+        </div>
+      </div>
+
+      <!---------- Separator 5 ------------>
+
+      <div class="separator-block">
+        <div class="separator-block__container">
+          <div class="separator-block__title">
+            <h2>ФОРМА ОБРАТНОЙ СВЯЗИ</h2>
+          </div>
+        </div>
+        <div class="separator-block__subtitle">
+          <p>Внесите данные в форму и мы обязательно перезвоним вам</p>
+        </div>
+      </div>
+
+<div class="form-block">
+  <div class="form-block__body">
+    <div class="form-block__item">
+      <div class="form-block__item form-block__item_text"></div>
     </div>
   </div>
+</div>
+
+    </div>
+
   </div>
+  </div>
+
+
   <footer class="footer">Footer</footer>
   </div>
   <script src="js/main.js"></script>
